[gd_scene load_steps=4 format=3 uid="uid://djibgq1jcurs4"]

[ext_resource type="Script" path="res://WinLose_Screen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dqw1l7ds7sp6q" path="res://ChiKareGo2.ttf" id="2_oa31u"]
[ext_resource type="Texture2D" uid="uid://cin0agcvqnnos" path="res://restart.png" id="3"]

[node name="WinLose_Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
pivot_offset = Vector2(40, -86)
script = ExtResource("1")

[node name="Lose_text" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 180.0
offset_right = 43.0
offset_bottom = 203.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_oa31u")
theme_override_font_sizes/font_size = 20
text = " You Lose!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Win_text" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 180.0
offset_right = 40.0
offset_bottom = 203.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_oa31u")
theme_override_font_sizes/font_size = 20
text = " You win!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Centrebox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -50.5
offset_right = 80.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Option_buttons" type="VBoxContainer" parent="Centrebox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Restart_button" type="Button" parent="Centrebox/Option_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oa31u")
theme_override_font_sizes/font_size = 20
text = "Restart"

[node name="Main_Menu_button" type="Button" parent="Centrebox/Option_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oa31u")
theme_override_font_sizes/font_size = 20
text = "Back To Main Menu"

[node name="Quit_button" type="Button" parent="Centrebox/Option_buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oa31u")
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Player_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 222.0
offset_right = 0.5
offset_bottom = 245.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player_PB_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 200.0
offset_right = 0.5
offset_bottom = 223.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Sprite2D" parent="."]
position = Vector2(628, 288)
scale = Vector2(0.09, 0.09)
texture = ExtResource("3")

[connection signal="pressed" from="Centrebox/Option_buttons/Restart_button" to="." method="_on_Restart_button_pressed"]
[connection signal="pressed" from="Centrebox/Option_buttons/Main_Menu_button" to="." method="_on_Main_Menu_button_pressed"]
[connection signal="pressed" from="Centrebox/Option_buttons/Quit_button" to="." method="_on_Quit_button_pressed"]
